src/rabbit/manifests/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http #port for rabbitmq GUI
      protocol: TCP
      port: 15672 #crate ingress for this port since it's will accessed from outside the cluster
      targetPort: 15672
    - name: amqp #port for message trasmission
      protocol: TCP
      port: 5672
      targetPort: 5672
